Add supports for the `cmake install' command.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,3 +14,5 @@ elseif(UNIX)
         message(CHECK_FAIL "X11 support not found")
     endif()
 endif()
+
+install(TARGETS clcwsal LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
